Addition of Hero Section & Navigation

--- a/07-Omnifood-Desktop/styles/style.css
+++ b/07-Omnifood-Desktop/styles/style.css
@@ -6,19 +6,22 @@ SPACING SYSTEM (px)
 
 Font Weight
 Default: 400
+Medium: 500
+Semi-Bold: 600
+Bold: 700
 
 Line Height
 Default: 1
-
+Paragraphs: 1.6
 
 02--COLORS
 
 Primary: #e67e22
-
-Tints: 
-Shades: 
+Tints: #fdf2e9
+Shades: #cf711f
 Accents:
 Greys: #555
+#333
 
 03--Images
 All images are already stored in img folder inside the 07-Omnifood-Desktop folder
@@ -26,6 +29,7 @@ All images are already stored in img folder inside the 07-Omnifood-Desktop folde
 04--Shadows
 
 05--Border Radius
+borer-radius: 0.9rem
 
 06--White Space
 
@@ -40,9 +44,181 @@ FONT SIZE SYSTEM (px)
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+/* ****************************** */
+/* GENERAL COMPONENTS */
+/* ****************************** */
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1;
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  font-size: 2rem;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 0.9rem;
+  transition: background-color 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  color: #fff;
+  background-color: #e67e22;
+}
+.btn--full:hover,
+.btn--full:active {
+  color: #fff;
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  color: #555;
+  background-color: #fff;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  color: #555;
+  background-color: #fdf2e9;
+  /* border: 3px solid #fff; */
+  /* Text jumps when we hover the button coz border gets formed outside the button */
+  /* trick: Use box-shadow property */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* ****************************** */
+/* HEADER */
+/* ****************************** */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+
+/* ****************************** */
+/* NAVIGATION */
+/* ****************************** */
+.main-nav-list {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  text-decoration: none;
+  font-size: 1.8rem;
+  color: #333;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 0.9rem;
+  color: #fff;
+  display: inline-block;
+  background-color: #e67e22;
+}
+
+.nav-cta:hover,
+.nav-cta:active {
+  background-color: #cf711f;
+}
+/* ****************************** */
+/* HERO SECTION */
+/* ****************************** */
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-description {
+  line-height: 1.6;
+  font-size: 2rem;
+  margin-bottom: 4.8rem;
+}
+
+.delivered-meals {
+  margin-top: 8rem;
+  display: flex;
+  gap: 1.6rem;
+  align-items: center;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin-right: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
