--- a/07-Omnifood-Desktop/styles/style.css
+++ b/07-Omnifood-Desktop/styles/style.css
@@ -1,115 +1,3 @@
-/* 
-01--TYPOGRAPHY SYSTEM 
-
-SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-Font Weight
-Default: 400
-Medium: 500
-Semi-Bold: 600
-Bold: 700
-
-Line Height
-Default: 1
-Paragraphs: 1.6
-
-02--COLORS
-
-Primary: #e67e22
-Tints: #fdf2e9
-Shades: #cf711f
-Accents:
-Greys: #555
-#333
-
-03--Images
-All images are already stored in img folder inside the 07-Omnifood-Desktop folder
-
-04--Shadows
-
-05--Border Radius
-borer-radius: 0.9rem
-
-06--White Space
-
-
-FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/* ****************************** */
-/* GENERAL COMPONENTS */
-/* ****************************** */
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1;
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-
-  font-size: 2rem;
-  text-decoration: none;
-  font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 0.9rem;
-  transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  color: #fff;
-  background-color: #e67e22;
-}
-.btn--full:hover,
-.btn--full:active {
-  color: #fff;
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  color: #555;
-  background-color: #fff;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  color: #555;
-  background-color: #fdf2e9;
-  /* border: 3px solid #fff; */
-  /* Text jumps when we hover the button coz border gets formed outside the button */
-  /* trick: Use box-shadow property */
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /* ****************************** */
 /* HEADER */
 /* ****************************** */
@@ -221,4 +109,60 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/* ****************************** */
+/* How it Works Section */
+/* ****************************** */
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 700;
+  color: #ddd;
+}
+
+.step-description {
+  font-size: 2rem;
+  line-height: 1.6;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-img-box::after,
+.step-img-box::before {
+  content: "";
+
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+
+  background-color: #fae5d3;
+  z-index: -1;
+}
+.step-img {
+  width: 35%;
 }
