--- a/07-Omnifood-Desktop/styles/general.css
+++ b/07-Omnifood-Desktop/styles/general.css
@@ -32,6 +32,7 @@ All images are already stored in img folder inside the 07-Omnifood-Desktop folde
 
 05--Border Radius
 borer-radius: 0.9rem
+medium-border-radius: 1.1rem
 
 06--White Space
 
@@ -57,6 +58,9 @@ body {
   color: #555;
 }
 
+strong {
+  font-weight: 500;
+}
 /* ****************************** */
 /* GENERAL COMPONENTS */
 /* ****************************** */
@@ -132,7 +136,7 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -162,6 +166,32 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* ****************************** */
+/* HELPER CLASSES */
+/* ****************************** */
+.center-text {
+  text-align: center;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
 }
