--- a/07-Omnifood-Desktop/styles/general.css
+++ b/07-Omnifood-Desktop/styles/general.css
@@ -24,6 +24,7 @@ Shades: #cf711f
 Accents:
 Greys: #555
 #333
+#6f6f6f
 
 03--Images
 All images are already stored in img folder inside the 07-Omnifood-Desktop folder
@@ -74,6 +75,10 @@ strong {
   display: grid;
   row-gap: 9.6rem;
   column-gap: 6.4rem;
+}
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--2-cols {
@@ -179,6 +184,26 @@ strong {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
 }
 
 /* ****************************** */
