--- a/07-Omnifood-Desktop/styles/style.css
+++ b/07-Omnifood-Desktop/styles/style.css
@@ -8,6 +8,7 @@
   background-color: #fdf2e9;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 .logo {
   height: 2.2rem;
@@ -17,18 +18,19 @@
 /* NAVIGATION */
 /* ****************************** */
 .main-nav-list {
-  display: flex;
   list-style: none;
+  display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
+  display: inline-block;
   text-decoration: none;
-  font-size: 1.8rem;
   color: #333;
   font-weight: 500;
+  font-size: 1.8rem;
   transition: all 0.3s;
 }
 
@@ -38,18 +40,56 @@
 }
 
 .main-nav-link.nav-cta:link,
-.nav-cta:visited {
+.main-nav-link.nav-cta:visited {
   padding: 1.2rem 2.4rem;
-  border-radius: 0.9rem;
+  border-radius: 9px;
   color: #fff;
-  display: inline-block;
   background-color: #e67e22;
 }
 
-.nav-cta:hover,
-.nav-cta:active {
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+} /* ****************************** */
+/* Sticky Navigation */
+/* ****************************** */
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.95);
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  z-index: 99;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.086);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /* ****************************** */
 /* HERO SECTION */
 /* ****************************** */
@@ -245,7 +285,7 @@
 }
 
 .meal-name {
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-weight: 600;
   color: #333;
   margin-bottom: 3.2rem;
