Fix Section Testimonial grid query

--- a/07-Omnifood-Desktop/styles/queries.css
+++ b/07-Omnifood-Desktop/styles/queries.css
@@ -98,7 +98,7 @@
     padding: 2.4rem 3.2rem 3.2rem 3.2rem;
   }
 
-  .section-testimonials {
+  .section-testimonial {
     grid-template-columns: 1fr;
   }
 
